# Hey-Dad-Listen-To-Me

./: README.md
TinyMotion-timeput-roll--v2/: TinyMotionTrainer-timeput-roll-20210717.tgz  TinyMotionTrainer__timeout_poll_20210717__v2.json  TinyMotionTrainer__timeout_poll_20210717__v2.tgz  TinyMotionTrainer__timeout_poll_20210717__v2_quantize.tgz  model.hdf5  model.tflite
TinyMotion-timeput-roll--v2/DaddyHeadsUp/: DaddyHeadsUp.ino  model.h
microbit/: microbit-Commander_1.hex  microbit-ListenMe_Commander_1.hex  microbit-ListenMe_Receiver_1.hex  microbit-Receiver_1.hex
photos/: commander device.HEIC
rpi_pico/: CMakeLists.txt
rpi_pico/parent_headsup/: CMakeLists.txt  main_functions.cpp
